--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
     <main class="main">
         <div class="container">
             <section class="main__wrapper">
-
-                <div class="users">
-                    <div class="p-10"><button onclick="showCreateForm()" class="crt-btn" type="button">Create User</button></div>
+                <div id="spinner" class="spinner none"></div>
+                <div id="users" class="users">
+                    <div class="p-10"><button onclick="showCreateForm()" class="crt-btn btn" type="button">Create
+                            User</button></div>
                     <table class="table" id="usersTable">
                         <thead class="table__header">
                             <tr class="headerRow">
@@ -47,30 +48,32 @@
                 <div id="profile" class="profile">
                     <form id="createUser" class="form none" action="">
                         <div class="form__wrapper">
+                            <div class="close-wrapper"><span onclick="closeModal('createUser')" class="close">x</span>
+                            </div>
                             <div class="logo">
                                 <img class="form__wrapper-img" src="./img/user-logo.jpg" alt="User Logo">
                             </div>
                             <div class="flex">
                                 <div>
-                                    <label for="first-name">First Name</label>
-                                    <input type="text" id="first-name" name="first-name" placeholder="First name">
+                                    <label>First Name</label>
+                                    <input type="text" name="first-name" placeholder="First name">
                                 </div>
                                 <div>
-                                    <label for="last-name">Last Name</label>
-                                    <input type="text" id="last-name" name="last-name" placeholder="Last name">
+                                    <label>Last Name</label>
+                                    <input type="text" name="last-name" placeholder="Last name">
                                 </div>
                             </div>
                             <div class="column">
-                                <label for="email">Email</label>
-                                <input type="email" id="email" name="email" placeholder="test@example.com">
+                                <label>Email</label>
+                                <input type="email" name="email" placeholder="test@example.com">
                             </div>
                             <div class="column">
-                                <label for="phone-number">Phone Number</label>
-                                <input type="tel" id="phone-number" name="phone-number" placeholder="+000-00-00-00">
+                                <label>Phone Number</label>
+                                <input type="tel" name="phone-number" placeholder="+000-00-00-00">
                             </div>
                             <div class="column">
-                                <label for="role">Role</label>
-                                <select id="role" name="role">
+                                <label>Role</label>
+                                <select name="role">
                                     <option value="">Select role</option>
                                     <option value="Admin">Admin</option>
                                     <option value="User">User</option>
@@ -78,36 +81,92 @@
                                 </select>
                             </div>
                             <div class="column">
-                                <label for="age">Age</label>
-                                <input type="text" id="age" name="age" placeholder="Age">
+                                <label>Age</label>
+                                <input type="text" name="age" placeholder="Age">
                             </div>
                             <div class="column">
-                                <label for="city">City</label>
-                                <input type="text" id="city" name="city" placeholder="Enter your city">
+                                <label>City</label>
+                                <input type="text" name="city" placeholder="Enter your city">
                             </div>
                             <div class="column">
-                                <label for="status">
-                                    <input type="checkbox" id="status" name="status">
+                                <label>
+                                    <input type="checkbox" name="status">
                                     Active?
                                 </label>
                             </div>
                             <div>
-                                <label for="file-upload">Upload avatar</label>
-                                <input onchange="setAvatar()" type="file" id="file-upload" name="file-upload"
+                                <label>Upload avatar</label>
+                                <input onchange="setAvatar('createUser')" type="file" name="file-upload"
                                     accept="image/*">
                             </div>
                             <div class="center">
-                                <button onclick="createUser()" class="crt-btn" type="button">Create User</button>
+                                <button onclick="createUser()" class="crt-btn btn" type="button">Create User</button>
+                            </div>
+                        </div>
+                    </form>
+
+                    <form id="editUser" class="form none" action="">
+                        <div class="form__wrapper">
+                            <div class="close-wrapper"><span onclick="closeModal('editUser')" class="close">x</span>
+                            </div>
+                            <div class="logo">
+                                <img class="form__wrapper-img" src="./img/user-logo.jpg" alt="User Logo">
+                            </div>
+                            <div class="flex">
+                                <div>
+                                    <label>First Name</label>
+                                    <input type="text" name="first-name" placeholder="First name">
+                                </div>
+                                <div>
+                                    <label>Last Name</label>
+                                    <input type="text" name="last-name" placeholder="Last name">
+                                </div>
+                            </div>
+                            <div class="column">
+                                <label>Email</label>
+                                <input type="email" name="email" placeholder="test@example.com">
+                            </div>
+                            <div class="column">
+                                <label>Phone Number</label>
+                                <input type="tel" name="phone-number" placeholder="+000-00-00-00">
+                            </div>
+                            <div class="column">
+                                <label>Role</label>
+                                <select name="role">
+                                    <option value="">Select role</option>
+                                    <option value="Admin">Admin</option>
+                                    <option value="User">User</option>
+                                    <option value="Staffer">Staffer</option>
+                                </select>
+                            </div>
+                            <div class="column">
+                                <label>Age</label>
+                                <input type="text" name="age" placeholder="Age">
+                            </div>
+                            <div class="column">
+                                <label>City</label>
+                                <input type="text" name="city" placeholder="Enter your city">
+                            </div>
+                            <div class="column">
+                                <label>
+                                    <input type="checkbox" name="status">
+                                    Active?
+                                </label>
+                            </div>
+                            <div>
+                                <label>Upload avatar</label>
+                                <input onchange="setAvatar('editUser')" type="file" name="file-upload" accept="image/*">
+                            </div>
+                            <div class="center">
+                                <button id="editBtn" class="edt-btn btn" type="button">Edit</button>
+                                <button id="deleteBtn" class="dlt-btn btn" type="button">Delete</button>
                             </div>
                         </div>
                     </form>
                 </div>
-
+            </section>
         </div>
-        </section>
-
     </main>
+    <script src="./js/script.js"></script>
 </body>
-
 </html>
-<script src="./js/script.js"></script>
